--- a/docs/source/algorithms/moo/ctaea.ipynb
+++ b/docs/source/algorithms/moo/ctaea.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. _nb_ctaea:"
@@ -11,7 +14,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# C-TAEA\n",
     "\n",
@@ -31,7 +38,10 @@
      "iopub.status.idle": "2022-07-03T13:22:53.575587Z",
      "shell.execute_reply": "2022-07-03T13:22:53.574879Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -75,7 +85,8 @@
     "res = minimize(problem,\n",
     "               algorithm,\n",
     "               ('n_gen', 600),\n",
-    "               seed=1\n",
+    "               seed=1,\n",
+    "               verbose=False\n",
     "               )\n",
     "\n",
     "sc = Scatter(legend=False, angle=(45, 30))\n",
@@ -94,7 +105,10 @@
      "iopub.status.idle": "2022-07-03T13:23:46.852725Z",
      "shell.execute_reply": "2022-07-03T13:23:46.852000Z"
     },
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -136,7 +150,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## API"
    ]
@@ -144,7 +162,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext"
+    "raw_mimetype": "text/restructuredtext",
+    "pycharm": {
+     "name": "#%% raw\n"
+    }
    },
    "source": [
     ".. autoclass:: pymoo.algorithms.moo.ctaea.CTAEA\n",
@@ -153,7 +174,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Python implementation by [cyrilpic](https://github.com/cyrilpic) based on the [original C code](https://web.archive.org/web/20200916105021/https://cola-laboratory.github.io/docs/publications)."
    ]
