Add run script for documentation

--- a/docs/source/algorithms/usage.ipynb
+++ b/docs/source/algorithms/usage.ipynb
@@ -3,10 +3,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext",
     "pycharm": {
      "name": "#%% raw\n"
-    }
+    },
+    "raw_mimetype": "text/restructuredtext"
    },
    "source": [
     ".. _nb_algorithms_usage:"
@@ -26,10 +26,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext",
     "pycharm": {
      "name": "#%% raw\n"
-    }
+    },
+    "raw_mimetype": "text/restructuredtext"
    },
    "source": [
     ".. admonition:: Overview\n",
@@ -43,10 +43,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext",
     "pycharm": {
      "name": "#%% raw\n"
-    }
+    },
+    "raw_mimetype": "text/restructuredtext"
    },
    "source": [
     ".. _nb_algorithms_func:"
@@ -141,10 +141,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext",
     "pycharm": {
      "name": "#%% raw\n"
-    }
+    },
+    "raw_mimetype": "text/restructuredtext"
    },
    "source": [
     ".. _nb_algorithms_object:"
@@ -175,10 +175,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext",
     "pycharm": {
      "name": "#%% raw\n"
-    }
+    },
+    "raw_mimetype": "text/restructuredtext"
    },
    "source": [
     ".. _nb_algorithms_next:"
@@ -282,10 +282,10 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "raw_mimetype": "text/restructuredtext",
     "pycharm": {
      "name": "#%% raw\n"
-    }
+    },
+    "raw_mimetype": "text/restructuredtext"
    },
    "source": [
     ".. _nb_algorithms_ask_and_tell:"
